@@ -52,7 +52,7 @@ UBYTE FPGA_alt_trigger_mode = CPU_TRIG_MODE;
 UBYTE dataFormat            = FMT_ENG;
 UBYTE compMode              = CMP_NONE;
 UBYTE daqMode               = DAQ_MODE_ATWD_FADC;
-int extendedMode        = 1; // FIXME default to zero
+UBYTE extendedMode          = FALSE;
 int FPGA_ATWD_select    = 0;
 int SW_compression      = 0;
 int SW_compression_fmt  = 0;
